# Tmds.DBus

./: .gitattributes  .gitignore  .travis.yml  Address.cs  AddressEntry.cs  ArgDirection.cs  AssemblyInfo.cs  AssemblyInfo.cs.in  AssemblyInfoStatic.cs  Authentication.cs  Bus.cs  BusException.cs  BusObject.cs  COPYING  Connection.cs  DBus.cs  DBusStruct.cs  DProxy.cs  DType.cs  DValue.cs  Daemon.cs  Directory.Packages.props  DynamicExportObject.cs  EndianFlag.cs  Error.cs  ExportObject.cs  FieldCode.cs  Header.cs  HeaderFlag.cs  Introspect.cs  Introspection.cs  IntrospectionSchema.cs  Makefile  Makefile.am  Mapper.cs  MatchRule.cs  Message.cs  MessageDumper.cs  MessageFilter.cs  MessageReader.cs  (+45 more)
.github/workflows/: build.yaml  docs.yaml
Protocol/: MessageContainer.cs  MessageFilter.cs  MessageReader.cs  MessageWriter.cs  PendingCall.cs  Signature.cs  SocketTransport.cs  Transport.cs
Unix/: UnixError.cs  UnixSocket.cs  UnixStream.cs
docs/: dbus.md  example.md  howto.md  introspection.md  modelling.md  protocol.md  tool.md
examples/Introspect/: Introspect.csproj  Program.cs
examples/MediaPlayer/: MediaPlayer.csproj  Program.cs
examples/MediaPlayerRemote/: MediaPlayerRemote.csproj  Program.cs
examples/NetworkManager/: NetworkManager.DBus.cs  NetworkManager.csproj  Program.cs
examples/dbus-xml/: org.freedesktop.NetworkManager.xml  org.freedesktop.NetworkManager_proxy.xml
samples/FSharp.MprisDemo/: .gitignore  Constants.fs  FSharp.MprisDemo.fsproj  Helpers.fs  Mpris.fs  Program.fs  README.md  ScrobblingWorker.fs  TrackInfo.fs
samples/Introspect/: Introspect.csproj  Program.cs  project.json
samples/MediaPlayer/: MediaPlayer.csproj  Program.cs  org.mpris.MediaPlayer2.TrackList.xml
samples/MediaPlayerRemote/: MediaPlayerRemote.csproj  Mpris.DBus.cs  Program.cs  project.json
samples/Monitor/: Monitor.csproj  Program.cs
samples/NetworkManager/: NetworkManager.DBus.cs  NetworkManager.csproj  Program.cs  project.json
src/: Directory.Build.props  version.json
src/Tmds.DBus/: Address.cs  AddressEntry.cs  ArgumentAttribute.cs  ClientConnectionOptions.cs  CloseSafeHandle.cs  ConnectException.cs  Connection.cs  ConnectionContext.cs  ConnectionException.cs  ConnectionExtensions.cs  ConnectionInfo.cs  ConnectionOptions.cs  ConnectionState.cs  ConnectionStateChangedEventArgs.cs  DBusConnection.cs  DBusException.cs  DBusInterfaceAttribute.cs  DBusObjectAttribute.cs  DBusStruct.cs  DefaultConnectionOptions.cs  DictionaryAttribute.cs  DisconnectedException.cs  Environment.cs  EventHandler.cs  IConnection.cs  IDBus.cs  IDBusConnection.cs  IDBusObject.cs  Interop.cs  MessageHelper.cs  ObjectPath.cs  OwnerChangedMatchRule.cs  PropertyAccess.cs  PropertyAttribute.cs  PropertyChanges.cs  ProtocolException.cs  README.md  ServerConnectionOptions.cs  ServiceOwnerChangedEventArgs.cs  ServiceRegistrationOptions.cs  (+7 more)
src/Tmds.DBus.CodeGen/: Generator.cs  GeneratorSettings.cs  InterfaceDescription.cs  IntrospectionsFetcher.cs  Program.cs  Tmds.DBus.CodeGen.csproj  example.xml
src/Tmds.DBus.Generator/: DBusSourceGenerator.cs  DiagnosticDescriptors.cs  Polyfill.cs  README.md  Tmds.DBus.Generator.csproj  Tmds.DBus.Generator.props
src/Tmds.DBus.Protocol/: ActionException.cs  AddMatchFlags.cs  Address.cs  AddressReader.cs  Array.cs  BusName.cs  ClientConnectionOptions.cs  ClientSetupResult.cs  CloseSafeHandle.cs  ConnectException.cs  Connection.DBus.cs  Connection.cs  ConnectionOptions.cs  DBusAddress.cs  DBusConnectFailedException.cs  DBusConnection.DBus.cs  DBusConnection.cs  DBusConnectionClosedException.cs  DBusConnectionException.cs  DBusConnectionOptions.cs  DBusEnvironment.cs  DBusErrorReplyException.cs  DBusException.cs  DBusExceptionBase.cs  DBusMessageException.cs  DBusMethodException.cs  DBusObject.cs  DBusOwnerChangedException.cs  DBusReadException.cs  DBusReaderException.cs  DBusReplyException.cs  DBusService.cs  DBusType.cs  DBusUnexpectedValueException.cs  DBusValue.cs  DBusValueType.cs  Dict.cs  DisconnectedException.cs  DisposableMessage.cs  ExceptionContext.cs  (+77 more)
src/Tmds.DBus.Protocol.SourceGenerator/: DBusSourceGenerator.cs  DiagnosticDescriptors.cs  Tmds.DBus.Protocol.SourceGenerator.csproj  Tmds.DBus.Protocol.SourceGenerator.props
src/Tmds.DBus.Tool/: CodeGenCommand.cs  Command.cs  CommandLineApplicationExtensions.cs  Generator.cs  IGenerator.cs  InterfaceDescription.cs  IntrospectionsFetcher.cs  ListCommand.cs  MonitorCommand.cs  NodeVisitor.cs  Program.cs  ProtocolGenerator.cs  README.md  Tmds.DBus.Tool.csproj
src/docfx/: docfx.json  example.md  generator.md  index.md  toc.yml
test/Tmds.DBus.Generator.Tests/: CodeGenerationTests.VerifyGeneratedOutput.verified.txt  CodeGenerationTests.VerifyGeneratedOutput_HandlerOnly.verified.txt  CodeGenerationTests.VerifyGeneratedOutput_ProxyAndHandlerDifferentNameSpace.verified.txt  CodeGenerationTests.VerifyGeneratedOutput_ProxyAndHandlerSameNamespace.verified.txt  CodeGenerationTests.VerifyGeneratedOutput_ProxyOnly.verified.txt  CodeGenerationTests.cs  DiagnosticsTests.cs  TestsBase.cs  Tmds.DBus.Generator.Tests.csproj
test/Tmds.DBus.Protocol.SourceGenerator.Tests/: CodeGenerationTests.VerifyGeneratedOutput.verified.txt  CodeGenerationTests.cs  DiagnosticsTests.cs  TestsBase.cs  Tmds.DBus.Protocol.SourceGenerator.Tests.csproj
test/Tmds.DBus.Protocol.Tests/: ConnectionTests.cs  DBusDaemon.cs  ExceptionContextTests.cs  ExceptionTests.cs  IntrospectionXmlTests.cs  NameOwnerWatcherTests.cs  PairedConnection.cs  PathNodeDictionaryTests.cs  UnitTest1.cs  (+8 more)
(+96 files in other folders)
